# IFJ20

./: .gitignore
Examples/: fact.go  fact_rec.go  for.go  gotest  gotest.go  hello.go  hello.output  return.go  var.go  var.output
Project/: CMakeLists.txt  Makefile  code_generation.c  code_generation.h  error.c  error.h  expression_stack.c  expression_stack.h  ifj  lex_analyzer.c  lex_analyzer.h  lex_token.c  lex_token.h  main.c  semantic_analyzer.c  symbol_table.c  symbol_table.h  symtable.c  symtable.h  syntax_analyzer.c  syntax_analyzer.h  syntax_tree.c  syntax_tree.h
final/: Makefile  code_generation.c  error.c  expression_stack.c  expression_stack.h  garbage_collector.c  garbage_collector.h  ifj  lex_analyzer.c  lex_analyzer.h  lex_token.h  main.c  rozdeleni  semantic_analyzer.c  semantic_analyzer.h  symtable.h  syntax_analyzer.c  syntax_tree.c  syntax_tree.h
